# legged_control

legged_controllers/: CMakeLists.txt  package.xml
legged_controllers/config/go2/: gait.info  reference.info  task.info
legged_controllers/include/legged_controllers/: LeggedController.h
legged_controllers/launch/: load_controller.launch
legged_controllers/scripts/: SendBasePose.py  SendBaseVel.py
legged_controllers/src/: LeggedController.cpp
legged_didc/: CMakeLists.txt  package.xml
legged_didc/include/legged_didc/: ControllerBase.h  DistributedIDC.h
legged_didc/src/: ControllerBase.cpp  DistributedIDC.cpp
legged_examples/legged_unitree/legged_go2/: CMakeLists.txt  package.xml
legged_examples/legged_unitree/legged_go2/config/: go2.yaml
legged_examples/legged_unitree/legged_go2/include/dds/msgs/: Go2pyLowCmd.idl  LowState.idl
legged_examples/legged_unitree/legged_go2/include/legged_go2/: UnitreeDDS.h
legged_examples/legged_unitree/legged_go2/launch/: go2.launch  legged_go2.launch
legged_examples/legged_unitree/legged_go2/src/: UnitreeDDS.cpp  legged_unitree_dds.cpp
legged_examples/legged_unitree/legged_unitree_description/urdf/go2/: const.xacro
legged_examples/legged_unitree/legged_unitree_hw/: CMakeLists.txt
legged_examples/legged_unitree/legged_unitree_hw/include/dds/: dds_subscriber.hpp
legged_examples/legged_unitree/legged_unitree_hw/include/legged_unitree_hw/: UnitreeDDS.h
legged_examples/legged_unitree/legged_unitree_hw/launch/: a1.launch
legged_examples/legged_unitree/legged_unitree_hw/src/: UnitreeDDS.cpp  legged_unitree_dds.cpp
