<?xml version="1.0"?>
<package format="2">
    <name>legged_didc</name>
    <version>0.0.0</version>
    <description>Distributed inverse dynamics control</description>
    <maintainer email="nimesh6798@gmail.com">Nimesh Khandelwal</maintainer>

    <license>BSD</license>
    <author email="nimesh6798@gmail.com">Nimesh Khandelwal</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_clang_tools</build_depend>
    <depend>roscpp</depend>
    <depend>ocs2_legged_robot</depend>
    <depend>qpoases_catkin</depend>
    <depend>pinocchio</depend>
</package>
